--- a/agro.html
+++ b/agro.html
@@ -51,28 +51,32 @@
             <div class="right-side">
                 <div class="content">
                     <h1 style="text-align: center;margin:20px;font-size:30px">Agropecuária</h1>
-                    <p style="text-align: center;">O curso de Agropecuária é uma graduação de nível tecnológico com duração 
-                        média de três anos. Durante esse período o tecnólogo é capacitado a partir de uma 
+                    <p style="text-align: center;">O curso de Agropecuária é uma graduação de nível tecnológico com
+                        duração
+                        média de três anos. Durante esse período o tecnólogo é capacitado a partir de uma
                         mescla de conhecimentos das áreas agrícola e zootécnica. O objetivos dessa graduação
-                         é formar profissionais capazes de suprir as necessidades do agronegócio 
-                         nacional em seus diferentes processos da cadeia produtiva, seja na produção, 
-                         industrialização ou comercialização do produto gerado.
+                        é formar profissionais capazes de suprir as necessidades do agronegócio
+                        nacional em seus diferentes processos da cadeia produtiva, seja na produção,
+                        industrialização ou comercialização do produto gerado.
                     </p>
                 </div>
             </div>
         </div>
     </section>
 
-    
 
 
-    <footer style="height: 100px;width: 100%;background: #006494;">
-        <div class="container" style="height: 100px;text-align: center;display: flex;justify-content: center;align-items: center;">
-            <img src="imgs/logo white.png" style="height: 60px;" alt="">
-            <p class="text-pq">E.E.P.P.S.M © 2023 Todos os direitos reservados</p>
-            <p class="text-pq">Tel: +55 35 99732-0451</p>
-        </div>
-    </footer>
+
+    <div class="conteudo-chato">
+        <footer style="height: 100px;width: 100%;background: #006494;">
+            <div class="container"
+                style="height: 100px;text-align: center;display: flex;justify-content: center;align-items: center;">
+                <img src="imgs/logo white.png" style="height: 60px;" alt="">
+                <p class="text-pq">E.E.P.P.S.M © 2023 Todos os direitos reservados</p>
+                <p class="text-pq">Tel: +55 35 99732-0451</p>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
