--- a/galeria.html
+++ b/galeria.html
@@ -36,7 +36,7 @@
 
     <!-- ======================================================== Meio da Pagina ====================================================== -->
     <nav class="main">
-        <h1 style="font-size: 36px;">Escola Estaudal Professor Pedro Saturnino de Magalhaes</h1>
+        <h1>Escola Estaudal Professor Pedro Saturnino de Magalhaes</h1>
     </nav>
     <!-- ================================================================ =============================================================== -->
 
@@ -332,15 +332,16 @@
 
 
 
-
-    <footer style="height: 100px;width: 100%;background: #006494;" id="contato">
-        <div class="container"
-            style="height: 100px;text-align: center;display: flex;justify-content: center;align-items: center;">
-            <img src="imgs/logo white.png" style="height: 60px;" alt="">
-            <p class="text-pq">E.E.P.P.S.M © 2023 Todos os direitos reservados</p>
-            <p class="text-pq">Tel: +55 35 99732-0451</p>
-        </div>
-    </footer>
+    <div class="conteudo-chato">
+        <footer style="height: 100px;width: 100%;background: #006494;" id="contato">
+            <div class="container"
+                style="height: 100px;text-align: center;display: flex;justify-content: center;align-items: center;">
+                <img src="imgs/logo white.png" style="height: 60px;" alt="">
+                <p class="text-pq">E.E.P.P.S.M © 2023 Todos os direitos reservados</p>
+                <p class="text-pq">Tel: +55 35 99732-0451</p>
+            </div>
+        </footer>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
