--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2 class="logo" id="inicio"><img src="imgs/logo white.png" alt="" style="height: 40px;"> </h2>
         <nav class="navigation">
             <a href="index.html">Inicio</a>
-            <a href="#sobrenos">Sobre nós</a>
+            <a href="#sobrenos">Sobre</a>
             <a href="#contato">Contato</a>
         </nav>
     </header>
@@ -104,7 +104,7 @@
 
             <div class="right-side">
                 <div class="content">
-                    <h1 style="text-align: center;margin:20px;">Sobre a EEPPSM</h1>
+                    <h1 style="text-align: center;margin:20px;">Sobre a EEPPSM.</h1>
                     <p>A Escola Estadual Professor Saturnino de Magalhães, localizada em Cabo Verde, MG, é uma
                         instituição de ensino em período integral dedicada a proporcionar uma educação abrangente e de
                         qualidade aos seus alunos. Oferece uma variedade de cursos, incluindo informática, segurança do
@@ -122,13 +122,15 @@
 
 
     <!-- =================================================================================== contato o footer da pagina =================================================================================================================================== -->
-    <footer style="height: 100px;width: 100%;background: #006494;">
-        <div class="container"
-            style="height: 100px;text-align: center;display: flex;justify-content: center;align-items: center;">
-            <img src="imgs/logo white.png" style="height: 60px;" alt="">
-            <p class="text-pq">E.E.P.P.S.M © 2023 Todos os direitos reservados</p>
-            <p class="text-pq">Tel: +55 35 99732-0451</p>
-        </div>
+    <div class="conteudo-chato">
+        <footer style="height: 100px;width: 100%;background: #006494;" class="contato">
+            <div class="cont"
+                style="height: 100px;text-align: center;display: flex;justify-content: center;align-items: center;">
+                <img src="imgs/logo white.png" style="height: 60px;" alt="">
+                <p class="text-pq">E.E.P.P.S.M © 2023 Todos os direitos reservados</p>
+                <p class="text-pq">Tel: +55 35 99732-0451</p>
+            </div>
+    </div>
     </footer>
 
     <!-- =============================================================================================== ======================================================================================= -->
