--- a/info.html
+++ b/info.html
@@ -65,17 +65,19 @@
         </div>
     </section>
 
-    
 
 
 
-    <footer style="height: 100px;width: 100%;background: #006494;">
-        <div class="container" style="height: 100px;text-align: center;display: flex;justify-content: center;align-items: center;">
-            <img src="imgs/logo white.png" style="height: 60px;" alt="">
-            <p class="text-pq">E.E.P.P.S.M © 2023 Todos os direitos reservados</p>
-            <p class="text-pq">Tel: +55 35 99732-0451</p>
-        </div>
-    </footer>
+    <div class="conteudo-chato">
+        <footer style="height: 100px;width: 100%;background: #006494;">
+            <div class="container"
+                style="height: 100px;text-align: center;display: flex;justify-content: center;align-items: center;">
+                <img src="imgs/logo white.png" style="height: 60px;" alt="">
+                <p class="text-pq">E.E.P.P.S.M © 2023 Todos os direitos reservados</p>
+                <p class="text-pq">Tel: +55 35 99732-0451</p>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
